--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -1,4 +1,5 @@
 ---
+keywords: "bash, shell, unix, automation, bayesian-automation, bayesian-ecosystem, archiver, cli, powershell, windows, bayesian-family"
 description: "Large-scale and secure folder and file archiver for automating your infrastructure"
 ---
 
@@ -15,7 +16,7 @@ description: "Large-scale and secure folder and file archiver for automating you
     <meta name="robots" content="index, follow"/>
     <meta name="googlebot" content="all"/>
     <meta name="google" content="notranslate"/>
-    <meta name="author" content="Damien Bayes"/>
+    <meta name="author" content="{{ metadata.author.name }} <{{ metadata.author.email }}>"/>
     <meta name="rating" content="general"/>
     <meta name="coverage" content="worldwide"/>
     <meta name="target" content="all"/>
@@ -53,11 +54,8 @@ description: "Large-scale and secure folder and file archiver for automating you
 
     <title>{{ title }} - Bayesian Packer</title>
 
-    <!--
     <meta name="keywords" content="{{ keywords }}"/>
-    -->
     <meta name="description" content="{{ description }}"/>
-    
 
     <!-- <link rel="icon" href="favicon.ico"/> -->
     <link href="/styles/bayesian-aspectus.css" rel="stylesheet"/>
@@ -68,11 +66,18 @@ description: "Large-scale and secure folder and file archiver for automating you
       <strong>We're sorry but this web application doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
 
+    {% include "_layouts/app-header.njk" %}
+
     <main>
       <!-- Dynamic content -->
       {{ content | safe }}
     </main>
 
-    <!-- Current page: {{ page.url | url }} -->
+    {% if metadata.environment != "development" %}
+    <code>
+      <pre>You're running the application in the {{ metadata.environment }} mode.</pre>
+      <pre>Current page: {{ page.url | url }}</pre>
+    </code>
+    {% endif %}
   </body>
 </html>
