--- a/src/_includes/_layouts/app-header.njk
+++ b/src/_includes/_layouts/app-header.njk
@@ -1,3 +1,42 @@
 <header>
-  Test
+  <div>
+    <ul>
+      <li>Ecosystem</li>
+      <li>Support Center</li>
+    </ul>
+    <ul>
+      <li>Sign Up</li>
+      <li>Sign In</li>
+    </ul>
+  </div>
+
+  <div>
+    {{ metadata.title }}
+  </div>
+
+  <nav>
+    <ul>
+      <li>
+        <a href="javascript:">Home</a>
+      </li>
+      <li>
+        <a href="javascript:">Guide</a>
+      </li>
+      <li>
+        <a href="javascript:">Updates</a>
+      </li>
+      <li>
+        <a href="javascript:">About</a>
+      </li>
+      <li>
+        <a href="javascript:">FAQ</a>
+      </li>
+      <li>
+        <a href="javascript:">Contribute</a>
+      </li>
+      <li>
+        <a href="javascript:">Contact</a>
+      </li>
+    </ul>
+  </nav>
 </header>
