--- a/src/_includes/_layouts/app-header.njk
+++ b/src/_includes/_layouts/app-header.njk
@@ -32,7 +32,7 @@
         <a href="javascript:">FAQ</a>
       </li>
       <li>
-        <a href="javascript:">Contribute</a>
+        <a href="javascript:">Contribution</a>
       </li>
       <li>
         <a href="javascript:">Contact</a>
