--- a/src/styles/bayesian-aspectus.scss
+++ b/src/styles/bayesian-aspectus.scss
@@ -46,64 +46,4 @@ h6 { font-size: $h6-font-size; }
   color: $white;
 }
 
-.app-footer {
-  color: $white;
-  background-color: $primary;
-  padding: $base-indent;
-  position: relative;
-  overflow: hidden;
-  z-index: 0;
-
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 512px;
-    height: 512px;
-    background: url(../assets/images/network-lines.svg) 0 0 no-repeat; 
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
-    object-fit: contain;
-    z-index: -1;
-    filter: invert(1);
-    opacity: .15;
-  }
-
-  &__copyright {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: $base-indent;
-    font-size: $sm-font-size;
-
-    p:first-of-type {
-      margin-bottom: $base-indent;
-    }
-
-    span {
-      display: block;
-      text-align: center;
-    }
-  }
-
-  &__synthesis {
-    display: flex;
-    justify-content: flex-end;
-    font-size: $sm-font-size;
-  }
-
-  &__brand {
-    display: flex;
-    justify-content: center;
-    margin-bottom: $lg-indent;
-
-    img {
-      width: 128px;
-      height: auto;
-      object-fit: contain;
-    }
-  }
-}
+@import "components/_app-footer"; 
