--- a/src/styles/variables/_color.scss
+++ b/src/styles/variables/_color.scss
@@ -58,6 +58,7 @@
   */
  $primary: #3A1F5D !default;
  $secondary: #C83660 !default;
+ $alternative: #F6D365 !default;
  
  $success: $green !default;
  $info: $teal !default;
