--- a/src/_includes/_layouts/app-footer.njk
+++ b/src/_includes/_layouts/app-footer.njk
@@ -1,20 +1,50 @@
 <footer class="app-footer">
   <!-- Deck 1 -->
-  <div class="app-footer__brand">
-    <img src="" alt="Bayesian Ecosystem"/>
-  </div>
+  <nav class="app-footer__navigation">
+    <ul>      
+      <li>
+        <a href="#">Home</a>
+      </li>
+      <li>
+        <a href="#">Guide</a>
+      </li>
+      <li>
+        <a href="#">Updates</a>
+      </li>
+      <li>
+        <a href="#">About</a>
+      </li>
+      <li>
+        <a href="#">FAQ</a>
+      </li>
+      <li>
+        <a href="#">Contribution</a>
+      </li>
+      <li>
+        <a href="#">Contact</a>
+      </li>
+    </ul>
+  </nav>
 
   <!-- Deck 2 -->
+  <div class="app-footer__brand">
+    <img src="{{ '/' | url }}images/bayesian-ecosystem-inverted.svg" alt="Bayesian Ecosystem"/>
+  </div>
+
+  <!-- Deck 3 -->
   <div class="app-footer__copyright">
-    <p>© {{ app_footer.currentYear }} Bayesian Ecosystem</p>
+    <p>&copy; {{ app_footer.currentYear }} Bayesian Ecosystem</p>
     <p>
       <span>All product names, trademarks and registered trademarks are property of their respective owners</span>
       <span>Use of these names, trademarks and brands does not imply endorsement</span>
     </p>
   </div>
 
-  <!-- Deck 3 -->
+  <!-- Deck 4 -->
   <div class="app-footer__synthesis">
-    <p>Product name: {{ metadata.title }} | Client version: {{ metadata.version }}</p>
+    <ul>
+      <li>Product name: <span>{{ metadata.title }}</span></li>
+      <li>Client version: <span>{{ metadata.version }}</span></li>
+    </ul>
   </div>
 </footer>
