--- a/src/index.njk
+++ b/src/index.njk
@@ -2,14 +2,40 @@
 layout: "_layouts/base.njk"
 title: "Home"
 
-advantages:
+features:
   items:
     - image: https://static.bayesianflow.space/1205921/images/43ad5bac-7952-4523-b4d4-f59ac23a165a.jpg
     - image: https://static.bayesianflow.space/1205921/images/e386e08a-c9a8-4e7d-a6ba-5628a20906d9.jpg
     - image: https://static.bayesianflow.space/1205921/images/ca99ec4f-542b-41a5-ac1c-72ecb354feab.jpg
 ---
 
-<section>
-  <h1>Bayesian Packer <span>{{ metadata.version }}</span></h1>
-  <p>{{ metadata.description }}</p>
+<section class="home">
+  <!-- Deck 1 -->
+  <div class="card">
+    <div class="card__body">
+      <div>
+        <h1>{{ metadata.title }} <span class="badge badge--alternative">{{ metadata.version }}</span></h1>
+        <h6>Built for developers in order to make technology open to the world</h6>
+        <p>{{ metadata.description }}</p>
+
+        <div class="button-collection">
+          <a href="button button--outlined">Get Started</a>
+          <a href="button button--primary">Github</a>
+        </div>
+      </div>
+      <div>
+        <img src="" alt="{{ metadata.title }}"/>        
+      </div>    
+    </div>
+  </div>
+
+  <!-- Deck 2 -->
+  <div class="card">
+    <div class="card__body">
+      <div class="headline">
+        <h2 class="headline__title">Features</h2>
+        <p class="headline__description">We do the work and you stay focused on the big picture</p>
+      </div>
+    </div>
+  </div>
 </section>
