--- a/src/_includes/_layouts/app-header.njk
+++ b/src/_includes/_layouts/app-header.njk
@@ -11,32 +11,16 @@
   </div>
 
   <div>
-    {{ metadata.title }}
+    {{ app.name }}
   </div>
 
   <nav>
     <ul>
+      {%- for navigation in navigation.items -%}
       <li>
-        <a href="javascript:">Home</a>
+        <a href="{{ navigation.url }}">{{ navigation.name }}</a>
       </li>
-      <li>
-        <a href="javascript:">Guide</a>
-      </li>
-      <li>
-        <a href="javascript:">Updates</a>
-      </li>
-      <li>
-        <a href="javascript:">About</a>
-      </li>
-      <li>
-        <a href="javascript:">FAQ</a>
-      </li>
-      <li>
-        <a href="javascript:">Contribution</a>
-      </li>
-      <li>
-        <a href="javascript:">Contact</a>
-      </li>
+      {%- endfor -%}
     </ul>
   </nav>
 </header>
