Add styles for the app header

--- a/src/styles/bayesian-aspectus.scss
+++ b/src/styles/bayesian-aspectus.scss
@@ -46,4 +46,7 @@ h6 { font-size: $h6-font-size; }
   color: $white;
 }
 
-@import "components/_app-footer"; 
+@import "components/_app-header";
+@import "components/_app-footer";
+
+@import "components/_navigation";
