--- a/src/_includes/_layouts/app-header.njk
+++ b/src/_includes/_layouts/app-header.njk
@@ -1,5 +1,6 @@
-<header>
-  <div>
+<header class="app-header">
+  <!-- Deck 1: System -->
+  <div class="app-header__system">
     <ul>
       <li>Ecosystem</li>
       <li>Support Center</li>
@@ -10,17 +11,49 @@
     </ul>
   </div>
 
-  <div>
-    {{ app.name }}
+  <!-- Deck 2 -->
+  <div class="app-header__default">
+    <div>
+      <div class="app-header__brand">
+        <a href="/">
+          <img src="{{ '/' | url }}{{ app_header.brandUrl }}" alt="{{ app.name }}"/>
+          {{ app.name }}
+        </a>
+      </div>
+    </div>
+    <div>
+      <div class="app-header__parallelogram">
+        <!-- Language switcher -->
+        <div class="language-switcher">
+          {{ app_footer[app.locale].languageSwitcher.language }}: 
+
+          <a href="javascript:" class="button button--secondary">
+            {% for lang in app.languages %}
+              {{ lang.label if lang.code == app.locale else "" }}
+            {% endfor %}
+          </a>
+        </div>
+      </div>
+    </div>
   </div>
 
-  <nav>
-    <ul>
-      {%- for navigation in navigation[ app.locale ].items -%}
-      <li>
-        <a href="{{ navigation.url }}">{{ navigation.name }}</a>
-      </li>
-      {%- endfor -%}
-    </ul>
+  <!-- Deck 3: Navigation -->
+  <nav class="navigation">
+    <button 
+      class="navigation__button">&#8249;</button>
+    
+    <div class="navigation__wrapper">
+      <ul class="navigation__list">
+        {%- for navigation in navigation[ app.locale ].items -%}
+        <li class="navigation__item">
+          <a class="navigation__link" href="{{ navigation.url }}">{{ navigation.name }}</a>
+        </li>
+        {%- endfor -%}
+      </ul>
+    </div>
+
+    <button 
+      class="navigation__button">&#8250;</button>
   </nav>
+
 </header>
