--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -57,7 +57,7 @@ description: "Large-scale and secure folder and file archiver for automating you
     <meta name="keywords" content="{{ keywords }}"/>
     <meta name="description" content="{{ description }}"/>
 
-    <!-- <link rel="icon" href="favicon.ico"/> -->
+    <link rel="icon" href="/favicon.ico"/>
     <link href="/styles/bayesian-aspectus.css" rel="stylesheet"/>
   </head>
 
@@ -73,6 +73,6 @@ description: "Large-scale and secure folder and file archiver for automating you
     </main>
     {% include "_layouts/app-footer.njk" %}
 
-    <script src="/js/index.js"></script>
+    <script src="/js/global.js"></script>
   </body>
 </html>
