--- a/src/contribution.njk
+++ b/src/contribution.njk
@@ -1,6 +1,11 @@
----
-layout: "_layouts/base.njk"
-title: "Contribution"
+---js
+{
+  layout: "_layouts/base.njk",
+  title: "Contribution"
+}
 ---
 
-Contribution Page
+<div class="headline">
+  <h1>{{ title }}</h1>
+  <p></p>
+</div>
