--- a/src/faq.njk
+++ b/src/faq.njk
@@ -1,6 +1,11 @@
----
-layout: "_layouts/base.njk"
-title: "Faq"
+---js
+{
+  layout: "_layouts/base.njk",
+  title: "FAQ"
+}
 ---
 
-FAQ Page
+<div class="headline">
+  <h1>{{ title }}</h1>
+  <p></p>
+</div>
