--- a/src/index.njk
+++ b/src/index.njk
@@ -1,6 +1,8 @@
----
-layout: "_layouts/base.njk"
-title: "Home"
+---js
+{
+  layout: "_layouts/base.njk",
+  title: "Home"
+}
 ---
 
 <section class="home">
