--- a/src/about.njk
+++ b/src/about.njk
@@ -1,6 +1,11 @@
----
-layout: "_layouts/base.njk"
-title: "About"
+---js
+{
+  layout: "_layouts/base.njk",
+  title: "About"
+}
 ---
 
-About Page
+<div class="headline">
+  <h1>{{ title }}</h1>
+  <p></p>
+</div>
