--- a/src/contact.njk
+++ b/src/contact.njk
@@ -1,6 +1,11 @@
----
-layout: "_layouts/base.njk"
-title: "Contact"
+---js
+{
+  layout: "_layouts/base.njk",
+  title: "Contact"
+}
 ---
 
-Contact Page
+<div class="headline">
+  <h1>{{ title }}</h1>
+  <p></p>
+</div>
