--- a/src/documentation.njk
+++ b/src/documentation.njk
@@ -1,6 +1,11 @@
----
-layout: "_layouts/base.njk"
-title: "Guide"
+---js
+{
+  layout: "_layouts/base.njk",
+  title: "Documentation"
+}
 ---
 
-Guide Page
+<div class="headline">
+  <h1>{{ title }}</h1>
+  <p></p>
+</div>
