--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -59,7 +59,7 @@ description: "Large-scale and secure folder and file archiver for automating you
     <link href="/styles/custom-bayesian-aspectus.css" rel="stylesheet"/>
   </head>
 
-  <body>
+  <body id="app">
     {% include "_partials/app-header.njk" %}
     <main class="container">
       <!-- Dynamic content goes here -->
