--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -55,8 +55,8 @@ description: "Large-scale and secure folder and file archiver for automating you
 
     <link rel="icon" href="/favicon.ico"/>
 
-    <link href="/styles/bayesian-aspectus.min.css" rel="stylesheet"/>
-    <link href="/styles/custom-bayesian-aspectus.css" rel="stylesheet"/>
+    <link href="/styles/bayesian-aspectus.min.css" rel="stylesheet" media="all"/>
+    <link href="/styles/custom-bayesian-aspectus.css" rel="stylesheet" media="all"/>
   </head>
 
   <body id="app">
