--- a/src/patch-notes/index.njk
+++ b/src/patch-notes/index.njk
@@ -11,16 +11,20 @@
 }
 ---
 
-<div class="headline">
-  <h1>{{ title }}</h1>
-  <p>Read the latest {{ app.name }} patch notes or research historical changes</p>
-</div>
+<section class="section">
 
-{% for note in notes %}
-  <article>
-    <a href="{{ note.url | url }}">
-      {{ note.data.title }}
-      {{ note.date | convertToReadableDate }}
-    </a>
-  </article>
-{% endfor %}
+  <div class="headline">
+    <h1 class="headline__title">{{ title }}</h1>
+    <p class="headline__description">Read the latest {{ app.name }} patch notes or research historical changes</p>
+  </div>
+
+  {% for note in notes %}
+    <article>
+      <a href="{{ note.url | url }}">
+        {{ note.data.title }}
+        {{ note.date | convertToReadableDate }}
+      </a>
+    </article>
+  {% endfor %}
+
+</section>
