--- a/src/index.njk
+++ b/src/index.njk
@@ -5,7 +5,7 @@
 }
 ---
 
-<section class="home">
+<section class="section home">
   <!-- Deck 1 -->
   <div class="card">
     <div class="card__body">
