--- a/src/patch-notes/index.njk
+++ b/src/patch-notes/index.njk
@@ -11,7 +11,7 @@
 }
 ---
 
-<section class="section">
+<section class="section patch-notes">
 
   <div class="headline">
     <h1 class="headline__title">{{ title }}</h1>
