--- a/src/about.njk
+++ b/src/about.njk
@@ -5,7 +5,11 @@
 }
 ---
 
-<div class="headline">
-  <h1>{{ title }}</h1>
-  <p></p>
-</div>
+<section class="section about">
+
+  <div class="headline">
+    <h1 class="headline__title">{{ title }}</h1>
+    <p class="headline__description"></p>
+  </div>
+
+</section>
