--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -62,7 +62,7 @@ description: "Large-scale and secure folder and file archiver for automating you
   <body id="app">
     {% include "_partials/app-header.njk" %}
     <main class="container">
-      <!-- Dynamic content goes here -->
+      {# "Dynamic" content goes here #}
       {{ content | safe }}
     </main>
     {% include "_partials/app-footer.njk" %}
