--- a/src/_includes/_layouts/base.njk
+++ b/src/_includes/_layouts/base.njk
@@ -3,6 +3,9 @@ keywords: "bash, shell, unix, automation, bayesian-automation, bayesian-ecosyste
 description: "Large-scale and secure folder and file archiver for automating your infrastructure"
 ---
 
+{% set metaDescription = app[locale].description %}
+{% set metaKeywords = app[locale].keyWords %}
+
 <!doctype html>
 
 <html lang="{{ app.locale }}">
