--- a/src/_includes/_partials/app-footer.njk
+++ b/src/_includes/_partials/app-footer.njk
@@ -22,7 +22,7 @@
           {%- set name = navigation.name %}
           {%- set url = navigation.url %}
 
-          <li data-navigation-id="{{ id }}">
+          <li data-navigation-id="{{ id }}" {% if page.url == post.url %} class="app-footer__navigation--active"{% endif %}>
             <a href="{{ url }}">{{ name }}</a>
           </li>
 
