--- a/src/patch-notes/index.njk
+++ b/src/patch-notes/index.njk
@@ -36,9 +36,15 @@
     <h2 id="my-pagination">This is the pagination</h2>
     <ul class="pagination__list">
       {%- for pageEntry in pagination.pages %}
-        <li class="pagination__item">
-          <a href="{{ pagination.hrefs[ loop.index0 ] }}"{% if page.url == pagination.hrefs[ loop.index0 ] %} aria-current="page"{% endif %}>Page {{ loop.index }}</a>
-        </li>
+
+        <li>{% if pagination.href.previous %}<a href="{{ pagination.href.previous }}">Previous</a>{% else %}Previous{% endif %}</li>
+
+          {%- for pageEntry in pagination.pages %}
+            <li><a href="{{ pagination.hrefs[ loop.index0 ] }}"{% if page.url == pagination.hrefs[ loop.index0 ] %} aria-current="page"{% endif %}>Page {{ loop.index }}</a></li>
+          {%- endfor %}
+
+        <li>{% if pagination.href.next %}<a href="{{ pagination.href.next }}">Next</a>{% else %}Next{% endif %}</li>
+
       {%- endfor %}
     </ul>
   </nav>
