--- a/src/patch-notes/index.njk
+++ b/src/patch-notes/index.njk
@@ -6,7 +6,8 @@
   pagination: {
     data: "collections.patch_notes",
     size: 6,
-    alias: "notes"
+    alias: "notes",
+    reverse: true
   }
 }
 ---
